--- a/CustomCamera/Info.plist
+++ b/CustomCamera/Info.plist
@@ -39,5 +39,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Camera Permission Required</string>
 </dict>
 </plist>
